Nice time update

--- a/appinfo.json
+++ b/appinfo.json
@@ -1,22 +1,41 @@
 {
-  "uuid": "030ee5fc-518b-49e5-b9b2-0700ee92af89",
-  "shortName": "Simplicity",
-  "longName": "Simplicity",
-  "companyName": "Pebble Technology",
-  "versionCode": 3,
-  "versionLabel": "3.0",
-  "watchapp": {
-    "watchface": true
-  },
-  "appKeys": {},
-  "resources": {
-    "media": [
-      {
-        "menuIcon": true,
-        "type": "png",
-        "name": "IMAGE_MENU_ICON",
-        "file": "images/menu_icon_simplicity.png"
-      }
-    ]
-  }
+    "appKeys": {},
+    "capabilities": [
+        ""
+    ],
+    "companyName": "info@designbuildplay.co.uk",
+    "longName": "Pebble_NiceTime",
+    "projectType": "pebblejs",
+    "resources": {
+        "media": [
+            {
+                "file": "images/menu_icon.png",
+                "menuIcon": true,
+                "name": "IMAGE_MENU_ICON",
+                "type": "png"
+            },
+            {
+                "file": "images/logo_splash.png",
+                "name": "IMAGE_LOGO_SPLASH",
+                "type": "png"
+            },
+            {
+                "file": "images/tile_splash.png",
+                "name": "IMAGE_TILE_SPLASH",
+                "type": "png"
+            },
+            {
+                "file": "fonts/UbuntuMono-Regular.ttf",
+                "name": "MONO_FONT_14",
+                "type": "font"
+            }
+        ]
+    },
+    "shortName": "PebbleNiceTime",
+    "uuid": "2c782088-7cc9-4ed0-aac5-efdb3bb089c4",
+    "versionCode": 1,
+    "versionLabel": "1.0",
+    "watchapp": {
+        "watchface": true
+    }
 }
